--- a/Tourding-FE-Info.plist
+++ b/Tourding-FE-Info.plist
@@ -2,21 +2,21 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>UIAppFonts</key>
-    <array>
-        <string>Pretendard-Black.otf</string>
-        <string>Pretendard-Bold.otf</string>
-        <string>Pretendard-ExtraBold.otf</string>
-        <string>Pretendard-ExtraLight.otf</string>
-        <string>Pretendard-Light.otf</string>
-        <string>Pretendard-Medium.otf</string>
-        <string>Pretendard-Regular.otf</string>
-        <string>Pretendard-SemiBold.otf</string>
-        <string>Pretendard-Thin.otf</string>
-    </array>
+	<key>BASE_URL</key>
+	<string>$(BASE_URL)</string>
 	<key>NMFNcpKeyId</key>
 	<string>$(NAVER_APP_KEY)</string>
-	<key>serverAPIKey</key>
-	<string>$(SERVER_API_KEY)</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Pretendard-Black.otf</string>
+		<string>Pretendard-Bold.otf</string>
+		<string>Pretendard-ExtraBold.otf</string>
+		<string>Pretendard-ExtraLight.otf</string>
+		<string>Pretendard-Light.otf</string>
+		<string>Pretendard-Medium.otf</string>
+		<string>Pretendard-Regular.otf</string>
+		<string>Pretendard-SemiBold.otf</string>
+		<string>Pretendard-Thin.otf</string>
+	</array>
 </dict>
 </plist>
