--- a/KakaoSDKFriendResources.bundle/Info.plist
+++ b/KakaoSDKFriendResources.bundle/Info.plist
@@ -2,54 +2,58 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>BuildMachineOSBuild</key>
-	<string>24E263</string>
-	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
-	<key>CFBundleIdentifier</key>
-	<string>com.kakao.sdk.KakaoSDKFriendResources</string>
-	<key>CFBundleInfoDictionaryVersion</key>
-	<string>6.0</string>
-	<key>CFBundleName</key>
-	<string>KakaoSDKFriendResources</string>
-	<key>CFBundlePackageType</key>
-	<string>BNDL</string>
-	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
-	<key>CFBundleSupportedPlatforms</key>
+	<key>BASE_URL</key>
+	<string>$(BASE_URL)</string>
+	<key>CFBundleURLTypes</key>
 	<array>
-		<string>iPhoneOS</string>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLIconFile</key>
+			<string></string>
+			<key>CFBundleURLName</key>
+			<string></string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>kakaoad623942dc5410b7f46ceeebd3eb23b1</string>
+			</array>
+		</dict>
+		<dict/>
 	</array>
-	<key>CFBundleVersion</key>
-	<string>1</string>
-	<key>DTCompiler</key>
-	<string>com.apple.compilers.llvm.clang.1_0</string>
-	<key>DTPlatformBuild</key>
-	<string>22A3362</string>
-	<key>DTPlatformName</key>
-	<string>iphoneos</string>
-	<key>DTPlatformVersion</key>
-	<string>18.0</string>
-	<key>DTSDKBuild</key>
-	<string>22A3362</string>
-	<key>DTSDKName</key>
-	<string>iphoneos18.0</string>
-	<key>DTXcode</key>
-	<string>1600</string>
-	<key>DTXcodeBuild</key>
-	<string>16A242d</string>
-	<key>MinimumOSVersion</key>
-	<string>13.0</string>
-	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2024 apiteam. All rights reserved.</string>
-	<key>UIDeviceFamily</key>
+	<key>KAKAO_NATIVE_APP_KEY</key>
+	<string>${KAKAO_NATIVE_APP_KEY}</string>
+	<key>KAKAO_REST_API_KEY</key>
+	<string>${KAKAO_REST_API_KEY}</string>
+	<key>LSApplicationQueriesSchemes</key>
 	<array>
-		<integer>1</integer>
-		<integer>2</integer>
+		<string>kakaokompassauth</string>
+		<string>kakaolink</string>
+		<string>kakaoplus</string>
+		<string>kakaotalk</string>
 	</array>
-	<key>UIRequiredDeviceCapabilities</key>
+	<key>NMFNcpKeyId</key>
+	<string>$(NAVER_APP_KEY)</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+
+	<!-- 위치 권한 안내 문구 추가 -->
+<key>NSLocationWhenInUseUsageDescription</key>
+<string>이 앱은 현재 위치를 기반으로 주변 관광지를 안내하기 위해 위치 정보가 필요합니다.</string>
+
+	<key>UIAppFonts</key>
 	<array>
-		<string>arm64</string>
+		<string>Pretendard-Black.otf</string>
+		<string>Pretendard-Bold.otf</string>
+		<string>Pretendard-ExtraBold.otf</string>
+		<string>Pretendard-ExtraLight.otf</string>
+		<string>Pretendard-Light.otf</string>
+		<string>Pretendard-Medium.otf</string>
+		<string>Pretendard-Regular.otf</string>
+		<string>Pretendard-SemiBold.otf</string>
+		<string>Pretendard-Thin.otf</string>
 	</array>
 </dict>
 </plist>
