--- a/KakaoSDKFriendResources.bundle/Info.plist
+++ b/KakaoSDKFriendResources.bundle/Info.plist
@@ -2,58 +2,62 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>BASE_URL</key>
-	<string>$(BASE_URL)</string>
-	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>CFBundleURLIconFile</key>
-			<string></string>
-			<key>CFBundleURLName</key>
-			<string></string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>kakaoad623942dc5410b7f46ceeebd3eb23b1</string>
-			</array>
-		</dict>
-		<dict/>
-	</array>
-	<key>KAKAO_NATIVE_APP_KEY</key>
-	<string>${KAKAO_NATIVE_APP_KEY}</string>
-	<key>KAKAO_REST_API_KEY</key>
-	<string>${KAKAO_REST_API_KEY}</string>
-	<key>LSApplicationQueriesSchemes</key>
-	<array>
-		<string>kakaokompassauth</string>
-		<string>kakaolink</string>
-		<string>kakaoplus</string>
-		<string>kakaotalk</string>
-	</array>
-	<key>NMFNcpKeyId</key>
-	<string>$(NAVER_APP_KEY)</string>
-	<key>NSAppTransportSecurity</key>
-	<dict>
-		<key>NSAllowsArbitraryLoads</key>
-		<true/>
-	</dict>
+  <key>BASE_URL</key>
+  <string>$(BASE_URL)</string>
 
-	<!-- 위치 권한 안내 문구 추가 -->
-<key>NSLocationWhenInUseUsageDescription</key>
-<string>이 앱은 현재 위치를 기반으로 주변 관광지를 안내하기 위해 위치 정보가 필요합니다.</string>
+  <key>CFBundleURLTypes</key>
+  <array>
+    <dict>
+      <key>CFBundleTypeRole</key>
+      <string>Editor</string>
+      <key>CFBundleURLIconFile</key>
+      <string></string>
+      <key>CFBundleURLName</key>
+      <string></string>
+      <key>CFBundleURLSchemes</key>
+      <array>
+        <string>kakaoad623942dc5410b7f46ceeebd3eb23b1</string>
+      </array>
+    </dict>
+  </array>
 
-	<key>UIAppFonts</key>
-	<array>
-		<string>Pretendard-Black.otf</string>
-		<string>Pretendard-Bold.otf</string>
-		<string>Pretendard-ExtraBold.otf</string>
-		<string>Pretendard-ExtraLight.otf</string>
-		<string>Pretendard-Light.otf</string>
-		<string>Pretendard-Medium.otf</string>
-		<string>Pretendard-Regular.otf</string>
-		<string>Pretendard-SemiBold.otf</string>
-		<string>Pretendard-Thin.otf</string>
-	</array>
+  <key>KAKAO_NATIVE_APP_KEY</key>
+  <string>${KAKAO_NATIVE_APP_KEY}</string>
+  <key>KAKAO_REST_API_KEY</key>
+  <string>${KAKAO_REST_API_KEY}</string>
+
+  <key>LSApplicationQueriesSchemes</key>
+  <array>
+    <string>kakaokompassauth</string>
+    <string>kakaolink</string>
+    <string>kakaoplus</string>
+    <string>kakaotalk</string>
+  </array>
+
+  <key>NMFNcpKeyId</key>
+  <string>$(NAVER_APP_KEY)</string>
+
+  <key>NSAppTransportSecurity</key>
+  <dict>
+    <key>NSAllowsArbitraryLoads</key>
+    <true/>
+  </dict>
+
+  <!-- 위치 권한 안내 문구 -->
+  <key>NSLocationWhenInUseUsageDescription</key>
+  <string>Tourding uses your location to calculate the best routes and show directions from your current position to your destination.</string>
+
+  <key>UIAppFonts</key>
+  <array>
+    <string>Pretendard-Black.otf</string>
+    <string>Pretendard-Bold.otf</string>
+    <string>Pretendard-ExtraBold.otf</string>
+    <string>Pretendard-ExtraLight.otf</string>
+    <string>Pretendard-Light.otf</string>
+    <string>Pretendard-Medium.otf</string>
+    <string>Pretendard-Regular.otf</string>
+    <string>Pretendard-SemiBold.otf</string>
+    <string>Pretendard-Thin.otf</string>
+  </array>
 </dict>
 </plist>
